@@ -1,3 +1,4 @@
+2024-03-02: [BUGFIX] Fix bug for volume widgets where bar crashes if volume is greater than 100%
 2024-03-02: [BUGFIX] Fix popup menus ignoring config
 2024-02-17: [FEATURE] Add `AnimatedImage` widget
 2024-02-16: [FEATURE] Allow pango markup in `PopupText` controls
